설정 파일 및 packageExe 수정